--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -17,7 +17,7 @@ body {
   height: 100%;
   line-height: 1.5;
   margin: 0;
-  padding: 2rem;
+  padding: 20px 24px;
 }
 
 .container {
@@ -34,4 +34,9 @@ img {
 
 .button {
   text-decoration: none;
+}
+
+#root {
+  width: 100%;
+  height: 100%;
 }
